<resources>
    <string name="app_name">Just Kofi</string>
    <string name="header_text">Coffee Bar</string>
    <string name="address">Find us at : 1234, Crescent Drive, VA</string>
    <string name="web_id">www.coffeebar1.com</string>
    <string name="hours_open">Open Hours : 9:00 am - 11:00 pm</string>
    <string name="phoneNumber">Phone: 777 111 222</string>
    <string name="description_text">Established in 1960. Love Coffee ? A great place to bond over a cup of coffee!</string>
</resources>
