<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#BCAAA4"
    tools:context="com.example.android.justkofi.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header_text"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:textStyle="italic|bold"
        android:fontFamily="cursive"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:id="@+id/name_view" />
    <ImageView
        android:src="@drawable/coffee"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/name_view" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:id="@+id/direction_view"
        android:paddingLeft="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/imageView" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/web_id"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:paddingLeft="16dp"
        android:id="@+id/webid_view"
        android:layout_below="@id/direction_view"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/operation_hours"
        android:text="@string/hours_open"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_below="@id/webid_view"
        android:paddingLeft="16dp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp" />
    <TextView
        android:autoLink="phone"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_number"
        android:text="777 111 222"
        android:textSize="18sp"
        android:paddingLeft="16dp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/operation_hours" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:text="@string/description_text"
        android:textSize="18sp"
        android:paddingLeft="16dp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_below="@+id/contact_number"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
</ScrollView>

